# real-async-trait-rs

./: Cargo.toml  LICENSE-MIT  README.md
examples/: simple.rs
src/: lib.rs  tests.rs
