[package]
name = "real-async-trait"
version = "0.0.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
description = "A proc macro that uses experimental features to work around type erasure for async traits"
readme = "README.md"
repository = "https://github.com/4lDO2/real-async-trait-rs"
license = "MIT OR Apache-2.0"
keywords = ["async-trait", "generic-associated-types", "existential-types", "proc-macro", "async"]
categories = ["asynchronous"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "visit"] }

[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }
